--- a/book/_config.yml
+++ b/book/_config.yml
@@ -15,4 +15,7 @@ launch_buttons:
   jupyterhub_url: "https://jupyter.idre.ucla.edu/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fbenjum%2F4skillsWorkshop&urlpath=tree%2F4skillsWorkshop%2Fbook&branch=main"
   colab_url: "https://colab.research.google.com"
   thebe: true
-  
+
+sphinx:
+  config:
+    html_extra_path: ['assets'] 
